tests/failures/invalid_add.stderr
error[E0432]: unresolved import `static_typing_tch::tensor_check_fn`
 --> tests/failures/invalid_add.rs:1:5
  |
1 | use static_typing_tch::tensor_check_fn;
  |     ^^^^^^^^^^^^^^^^^^^---------------
  |     |                  |
  |     |                  help: a similar name exists in the module: `tensor_check`
  |     no `tensor_check_fn` in the root

error: cannot determine resolution for the attribute macro `tensor_check_fn`
 --> tests/failures/invalid_add.rs:4:3
  |
4 | #[tensor_check_fn(a, b)]
  |   ^^^^^^^^^^^^^^^
  |
  = note: import resolution is stuck, try simplifying macro imports
